--- a/User Manual/GUI/GBX-Editor.html
+++ b/User Manual/GUI/GBX-Editor.html
@@ -16,7 +16,7 @@ Manual</span></a><span style="color: rgb(0, 0, 0); font-family: 'Times New Roman
 <hr style="width: 100%; height: 2px;"><a href="usermanual.html"><span style="font-family: Verdana;"></span></a><span style="font-family: Verdana;"></span>
 <div style="text-align: center;">
 <div style="text-align: left; font-family: Verdana;">
-<h2>Gearbox Editor</h2>
+<h2>Gearbox Editor</h2><big><big><big><span style="font-weight: bold; color: red;">!! This page is not up-to-date with the current Beta release !!<br><br></span></big></big></big>
 </div>
 <img style="width: 422px; height: 462px;" alt="gbx" usemap="#linkmap" src="pics/GBX-Editor.PNG"><br>
 <span style="font-family: Verdana;"><br>
