--- a/User Manual/GUI/VECTO-Editor.html
+++ b/User Manual/GUI/VECTO-Editor.html
@@ -60,13 +60,13 @@ be sent to the Job List automatically when saved.<br>
 <div style="margin-left: 40px;">Open <a href="VECTO-Editor_Driver.html">Driver Tab</a></div>
 </div>
 <br><br>
-<div style="margin-left: 40px;"><img src="pics/VECTO/Veh.png" style="width: 72px; height: 21px;" alt="veh"><a name="veh"></a> <span style="font-weight: bold;">Open Vehicle Editor</span><br>
+<div style="margin-left: 40px;"><img src="pics/VECTO/Veh.png" style="width: 72px; height: 21px;" alt="veh"><a name="veh"></a> <span style="font-weight: bold;">Open <a href="VEH-Editor.html">Vehicle Editor</a></span><br>
 <br>
 <img style="width: 72px; height: 21px;" alt="eng" src="pics/VECTO/Eng.png"><a name="eng"></a>
-<span style="font-weight: bold;">Open Engine Editor</span><br>
+<span style="font-weight: bold;">Open <a href="ENG-Editor.html">Engine Editor</a></span><br>
 <br>
 <img style="width: 72px; height: 21px;" alt="gbx" src="pics/VECTO/Gbx.png"><a name="gbx"></a>
-<span style="font-weight: bold;">Open Gearbox Editor</span><br>
+<span style="font-weight: bold;">Open <a href="GBX-Editor.html">Gearbox Editor</a></span><br>
 <br>
 <img style="width: 28px; height: 21px;" alt="brw" src="../pics/misc/browse.png"><a name="browse"></a>
 <span style="font-weight: bold;">Browse for
