--- a/User Manual/GUI/mainform.html
+++ b/User Manual/GUI/mainform.html
@@ -144,11 +144,9 @@ Browser<br>
 <br>
 </div>
 </div>
-<div style="margin-left: 40px;"><img style="width: 16px; height: 16px;" alt="remove" src="../pics/icons/minus-circle-icon.png"><a name="remfile"></a> <span style="font-weight: bold;">Remove selected (not checked!)
-files from List</span><br>
+<div style="margin-left: 40px;"><img style="width: 16px; height: 16px;" alt="remove" src="../pics/icons/minus-circle-icon.png"><a name="remfile"></a> <span style="font-weight: bold;">Remove selected&nbsp;files from List</span><br>
 <br>
-<img style="width: 16px; height: 16px;" alt="up" src="../pics/icons/Actions-arrow-up-icon.png"><img style="width: 16px; height: 16px;" alt="down" src="../pics/icons/Actions-arrow-down-icon.png"><a name="fileupdown"></a> <span style="font-weight: bold;">Move selected (not checked!)
-files up or down in list</span><br>
+<img style="width: 16px; height: 16px;" alt="up" src="../pics/icons/Actions-arrow-up-icon.png"><img style="width: 16px; height: 16px;" alt="down" src="../pics/icons/Actions-arrow-down-icon.png"><a name="fileupdown"></a> <span style="font-weight: bold;">Move selected&nbsp;files up or down in list</span><br>
 <br>
 <span style="font-weight: bold;"><a name="listoptions"></a>List
 Options</span><br>
