--- a/User Manual/GUI/mainform_batch.html
+++ b/User Manual/GUI/mainform_batch.html
@@ -48,10 +48,10 @@ Browser<br>
 <br>
 </div>
 </div>
-<div style="margin-left: 80px;"><img style="width: 16px; height: 16px;" alt="remove" src="../pics/icons/minus-circle-icon.png"><a name="remfile"></a> <span style="font-weight: bold;">Remove selected (not checked!)
+<div style="margin-left: 80px;"><img style="width: 16px; height: 16px;" alt="remove" src="../pics/icons/minus-circle-icon.png"><a name="remfile"></a> <span style="font-weight: bold;">Remove selected
 files from&nbsp;Cycle List</span><br>
 <br>
-<img style="width: 16px; height: 16px;" alt="up" src="../pics/icons/Actions-arrow-up-icon.png"><img style="width: 16px; height: 16px;" alt="down" src="../pics/icons/Actions-arrow-down-icon.png"><a name="fileupdown"></a> <span style="font-weight: bold;">Move selected (not checked!)
+<img style="width: 16px; height: 16px;" alt="up" src="../pics/icons/Actions-arrow-up-icon.png"><img style="width: 16px; height: 16px;" alt="down" src="../pics/icons/Actions-arrow-down-icon.png"><a name="fileupdown"></a> <span style="font-weight: bold;">Move selected
 files up or down in Cycle List</span><br>
 <br>
 <span style="font-weight: bold;"><a name="listoptions"></a>List
