--- a/User Manual/usermanual.html
+++ b/User Manual/usermanual.html
@@ -17,9 +17,9 @@ Manual</span><span style="color: rgb(0, 0, 0); font-family: 'Times New Roman'; f
 <br>
 <span style="font-family: Verdana;"><big><big><big><span style="font-weight: bold;">User Manual</span></big></big></big>
 <br>
-VECTO 1.0<br><br style="font-family: Verdana;"></span>
+VECTO 1.1<br><br style="font-family: Verdana;"></span>
 <hr style="width: 100%; height: 2px;"><ul style="text-align: left; font-family: Tahoma; line-height: 1.7em;">
-<li style="font-family: Calibri;"><big>User
+<li style="font-family: Calibri;"><big><a href="quickstart.html">Quick Start Guide</a></big></li><li style="font-family: Calibri;"><big>User
 Interface</big></li>
 <ul>
 <li style="font-family: Calibri;"><big><a href="GUI/mainform.html">Main Form</a></big></li>
@@ -28,7 +28,7 @@ Interface</big></li>
 <li style="font-family: Calibri;"><big><a href="GUI/ENG-Editor.html">Engine Editor</a></big></li>
 <li style="font-family: Calibri;"><big><a href="GUI/GBX-Editor.html">Gearbox Editor</a></big></li>
 </ul>
-<li style="font-family: Calibri;"><big><a href="quickstart.html">Quick Start Guide</a></big></li>
+<li style="font-family: Calibri;"><big><a href="general/cmd.html">Command line arguments<br></a></big></li>
 <li style="font-family: Calibri;"><big><a href="fileformat/index.html">Input and Output Files</a></big></li>
 <li style="font-family: Calibri;"><big><a href="contact.html">Contact &amp; Support</a></big></li>
 </ul>
