Internal/JRC Release: VECTO 1.1 beta 3
See VECTO Changelog.txt for details

--- a/User Manual/GUI/ENG-Editor.html
+++ b/User Manual/GUI/ENG-Editor.html
@@ -18,7 +18,7 @@ Manual</span></a><span style="color: rgb(0, 0, 0); font-family: 'Times New Roman
 <div style="text-align: left; font-family: Verdana;">
 <h2>Engine Editor</h2>
 </div>
-<img src="pics/ENG-Editor.PNG" style="width: 525px; height: 450px;" alt="eng" usemap="#linkmap"><br>
+<img src="pics/ENG-Editor.PNG" style="width: 524px; height: 449px;" alt="eng" usemap="#linkmap"><br>
 <span style="font-family: Verdana;"><br>
 <br>
 </span>
@@ -162,12 +162,7 @@ with "<span style="font-weight: bold;">c</span> "</span><br>
 transient calibration test cycle and model internal calculation of
 correction factor(s) to be applied to stationary fuel consumption map.<br>
 </div>
-<br><br>
-<img src="../pics/misc/browse.png" style="width: 28px; height: 21px;" alt="browse"><span style="font-weight: bold;"> Browse for files</span><br>
-<div style="margin-left: 40px;">Using the VECTO File
-Browser<br>
-</div>
-<br><br>
+<br><img style="width: 28px; height: 21px;" alt="" src="../pics/misc/browse.png"> <span style="font-weight: bold;">Open file browser</span>.<br><br><img style="width: 22px; height: 22px;" alt="" src="../pics/misc/OpenFile.PNG"> <span style="font-weight: bold;">Open file</span> with GRAPHi or an user-defined tool (see <a href="settings.html#opencmd">File Open Command)</a>.<br><br>
 <img src="../pics/misc/OK.png" style="width: 75px; height: 23px;" alt="OK"><a name="ok"></a><span style="font-weight: bold;">Save
 and close file</span><br>
 <div style="margin-left: 40px;">If necessary the file path
