--- a/User Manual/GUI/VECTO-Editor.html
+++ b/User Manual/GUI/VECTO-Editor.html
@@ -2,7 +2,7 @@
 <html><head>
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>VECTO Editor - VECTO User Manual</title></head>
 <body>
-<map name="linkmap"><area shape="rect" coords="10,34,30,53&quot;" href="#new" title="New File"><area shape="rect" coords="33,34,52,53&quot;" href="#open" title="Open File"><area shape="rect" coords="57,34,77,53&quot;" href="#save" title="Save"><area shape="rect" coords="85,34,102,53&quot;" href="#saveas" title="Save As..."><area shape="rect" coords="113,33,130,54&quot;" href="#sendto" title="Send current file to Job List in Main Form"><area shape="rect" coords="117,108,213,130&quot;" href="VECTO-Editor_Driver.html" title="Driver Tab"><area shape="rect" coords="20,140,96,161&quot;" href="#veh" title="Open Vehicle Editor"><area shape="rect" coords="20,167,93,188&quot;" href="#eng" title="Open Engine Editor"><area shape="rect" coords="21,197,94,216&quot;" href="#gbx" title="Open Gearbox Editor"><area shape="rect" coords="654,141,683,220&quot;" href="#browse" title="Open VECTO File Browser"><area shape="rect" coords="24,226,684,380&quot;" href="#aux" title="Auxiliaries"><area shape="rect" coords="25,390,684,578&quot;" href="#cycles" title="Cycles"><area shape="rect" coords="531,593,609,613&quot;" href="#ok" title="Save and close"><area shape="rect" coords="616,593,694,612&quot;" href="#cancel" title="Close without saving"></map>
+<map name="linkmap"><area shape="rect" coords="10,34,30,53&quot;" href="#new" title="New File"><area shape="rect" coords="33,34,52,53&quot;" href="#open" title="Open File"><area shape="rect" coords="57,34,77,53&quot;" href="#save" title="Save"><area shape="rect" coords="85,34,102,53&quot;" href="#saveas" title="Save As..."><area shape="rect" coords="113,33,130,54&quot;" href="#sendto" title="Send current file to Job List in Main Form"><area shape="rect" coords="24,117,138,136&quot;" href="#engonly"><area shape="rect" coords="111,144,209,165&quot;" href="VECTO-Editor_Driver.html"><area shape="rect" coords="18,172,95,192&quot;" href="#veh"><area shape="rect" coords="19,201,94,220&quot;" href="#eng"><area shape="rect" coords="18,228,96,249&quot;" href="#gbx"><area shape="rect" coords="22,258,682,410&quot;" href="#aux"><area shape="rect" coords="531,640,607,663&quot;" href="#ok"><area shape="rect" coords="617,642,690,663&quot;" href="#cancel"><area shape="rect" coords="22,424,684,605&quot;" href="#cycles"><area shape="rect" coords="653,172,683,250&quot;" href="#browse"></map>
 <table style="width: 100%; height: 54px; text-align: left; margin-left: auto; margin-right: auto;" border="0" cellpadding="2" cellspacing="2">
 <tbody>
 <tr>
@@ -18,34 +18,39 @@ Manual</span></a><span style="color: rgb(0, 0, 0); font-family: 'Times New Roman
 <div style="text-align: left; font-family: Verdana;">
 <h2>VECTO Editor</h2>
 </div>
-<img src="pics/VECTO-Editor.PNG" usemap="#linkmap" style="width: 710px; height: 649px;" alt="VECTO Editor"><br>
+<img src="pics/VECTO-Editor.PNG" usemap="#linkmap" style="width: 710px; height: 699px;" alt="VECTO Editor"><br>
 <span style="font-family: Verdana;"><br>
 </span>
 <div style="text-align: left;">
-<div style="margin-left: 40px;"><img src="../pics/icons/blue-document-icon.png" style="width: 16px; height: 16px;" alt="new"><span style="font-weight: bold;"><a name="new"></a> New
+<div style="margin-left: 40px;"><img src="../pics/icons/blue-document-icon.png" style="width: 16px; height: 16px;" alt="new"><span style="font-weight: bold;"><a name="new"></a>New
 Job File</span><br>
 </div>
 <div style="margin-left: 80px;">Create a new empty .vecto
 file<br>
 </div>
-<div style="margin-left: 40px;"><br><br>
-<img src="../pics/icons/Open-icon.png" style="width: 16px; height: 16px;" alt="open"><span style="font-weight: bold;"><a name="open"></a> Open
+<div style="margin-left: 40px;"><br>
+<br>
+<img src="../pics/icons/Open-icon.png" style="width: 16px; height: 16px;" alt="open"><span style="font-weight: bold;"><a name="open"></a>
+Open
 existing Job File</span><br>
 </div>
 <div style="text-align: left;">
 <div style="margin-left: 80px;">Open an existing .vecto
 file<br>
-<br><br>
+<br>
+<br>
 </div>
 <div style="margin-left: 40px;"><img src="../pics/icons/Actions-document-save-icon.png" style="width: 16px; height: 16px;" alt="save"><a name="save"></a> <span style="font-weight: bold;">Save
 current Job File</span></div>
-<div style="margin-left: 80px;"><br><br>
+<div style="margin-left: 80px;"><br>
+<br>
 </div>
 <div style="margin-left: 40px;"><img src="../pics/icons/Actions-document-save-as-icon.png" style="width: 16px; height: 16px;" alt="SaveAs"><a name="saveas"></a> <span style="font-weight: bold;">Save
 Job File as...</span><br>
 <div style="margin-left: 40px;">Using the VECTO File
 Browser<br>
-<br><br>
+<br>
+<br>
 </div>
 </div>
 <div style="margin-left: 40px;"><img src="../pics/icons/export-icon.png" style="width: 16px; height: 16px;" alt="sendto"><a name="sendto"></a> <span style="font-weight: bold;">Send
@@ -55,12 +60,17 @@ Form</a></span><br>
 be sent to the Job List automatically when saved.<br>
 </div>
 </div>
-<div style="margin-left: 40px;"><br><br>
-<span style="font-weight: bold;">Driver Tab</span><br>
+<div style="margin-left: 40px;"><br>
+<a name="engonly"></a> <span style="font-weight: bold;">Engine Only Mode</span><br><div style="margin-left: 40px;">This
+mode is used to calculate fuel consumption from a given load cycle
+(engine speed and torque). Vehicle (.vveh), Gearbox (.vgbx) and
+Auxiliary (.vaux) files are notrequired. <br>The <a href="../fileformat/VDRI.html">driving cylce (.vdri)</a> must contain:<br><ul><li>Engine speed: header: &lt;n&gt;</li><li>Engine torque &lt;Me&gt; <span style="text-decoration: underline;">or</span> engine power &lt;Pe&gt; at clutch. <span style="font-weight: bold; color: red;">Note that VECTO adds engine inertia power demand!</span></li><li>[Optional] Additional power demand (aux) &lt;Padd&gt;</li></ul></div><span style="font-weight: bold;">Driver Tab</span><br>
 <div style="margin-left: 40px;">Open <a href="VECTO-Editor_Driver.html">Driver Tab</a></div>
 </div>
-<br><br>
-<div style="margin-left: 40px;"><img src="pics/VECTO/Veh.png" style="width: 72px; height: 21px;" alt="veh"><a name="veh"></a> <span style="font-weight: bold;">Open <a href="VEH-Editor.html">Vehicle Editor</a></span><br>
+<br>
+<br>
+<div style="margin-left: 40px;"><img src="pics/VECTO/Veh.png" style="width: 72px; height: 21px;" alt="veh"><a name="veh"></a> <span style="font-weight: bold;">Open <a href="VEH-Editor.html">Vehicle
+Editor</a></span><br>
 <br>
 <img style="width: 72px; height: 21px;" alt="eng" src="pics/VECTO/Eng.png"><a name="eng"></a>
 <span style="font-weight: bold;">Open <a href="ENG-Editor.html">Engine Editor</a></span><br>
@@ -68,31 +78,41 @@ be sent to the Job List automatically when saved.<br>
 <img style="width: 72px; height: 21px;" alt="gbx" src="pics/VECTO/Gbx.png"><a name="gbx"></a>
 <span style="font-weight: bold;">Open <a href="GBX-Editor.html">Gearbox Editor</a></span><br>
 <br>
-<img style="width: 28px; height: 21px;" alt="brw" src="../pics/misc/browse.png"><a name="browse"></a>
+&nbsp;<a name="browse"></a>
 <span style="font-weight: bold;">Browse for
 vehicle/engine/gearbox files</span><br>
 <div style="margin-left: 40px;">...using the VECTO File
 Browser<br>
-<br><br>
+<br>
+<br>
 </div>
 </div>
 <div style="margin-left: 40px;"><span style="font-weight: bold;"><a name="aux"></a>Auxiliaries</span><br>
 <div style="margin-left: 40px;">This list contains all
-auxiliaries (.vaux files) used for calculation.<br><span style="font-weight: bold;">Double-click</span> entries to edit with the <a href="VECTO-Editor_Aux.html">Aux Dialog</a>.<br>
+auxiliaries (.vaux files) used for calculation.<br>
+<span style="font-weight: bold;">Double-click</span>
+entries to edit with the <a href="VECTO-Editor_Aux.html">Aux
+Dialog</a>.<br>
 <img style="width: 16px; height: 16px;" alt="addaux" src="../pics/icons/plus-circle-icon.png"> Add new Auxiliary<br>
 <img style="width: 16px; height: 16px;" alt="remaux" src="../pics/icons/minus-circle-icon.png"> Remove the
 selected Auxiliary from the list<br>
-The .vaux format is described <a href="VECTO-Editor_Aux.html#file">here</a>.<br><br>
+The .vaux format is described <a href="VECTO-Editor_Aux.html#file">here</a>.<br>
+<br>
 </div>
 </div>
 <div style="margin-left: 40px;"><span style="font-weight: bold;"><a name="cycles"></a>Cycles</span><br>
 <div style="margin-left: 40px;">List of cycles used for
-calculation.<br><span style="font-weight: bold;">Double-click</span> entries to open using the <a href="settings.html">File Open Command</a>.<br><span style="font-weight: bold;">Click</span> selected items to edit file paths.<br>
+calculation.<br>
+<span style="font-weight: bold;">Double-click</span> an entry to open the file (see <a href="settings.html#opencmd">File
+Open Command</a>).<br>
+<span style="font-weight: bold;">Click</span>
+selected items to edit file paths.<br>
 <img style="width: 16px; height: 16px;" alt="addcycle" src="../pics/icons/plus-circle-icon.png"> Add cycle (.vdri)
 using the VECTO file browser<br>
 <img style="width: 16px; height: 16px;" alt="remcycle" src="../pics/icons/minus-circle-icon.png"> Remove the
 selected cycle from the list<br>
-The .vdri format is described <a href="../fileformat/VDRI.html">here</a>.<br><br>
+The .vdri format is described <a href="../fileformat/VDRI.html">here</a>.<br>
+<br>
 </div>
 </div>
 <div style="margin-left: 40px;"><img style="width: 75px; height: 23px;" alt="OK" src="../pics/misc/OK.png"><a name="ok"></a>
@@ -104,7 +124,14 @@ List in the <a href="mainform.html">Main Form</a><br>
 </div>
 <div style="margin-left: 40px;"><img style="width: 75px; height: 23px;" alt="Cancel" src="../pics/misc/Cancel.png"><a name="cancel"></a><span style="font-weight: bold;"> Cancel without saving</span></div>
 <br>
-<table style="text-align: left; width: 100%; height: 1200px;" border="0" cellpadding="2" cellspacing="2"><tbody><tr><td></td></tr></tbody></table><br>
+<table style="text-align: left; width: 100%; height: 1200px;" border="0" cellpadding="2" cellspacing="2">
+<tbody>
+<tr>
+<td></td>
+</tr>
+</tbody>
+</table>
+<br>
 <br>
 <div style="text-align: left;">
 <hr style="width: 100%; height: 2px;"><a href="../contact.html">Contact</a>
