--- a/User Manual/GUI/VEH-Editor.html
+++ b/User Manual/GUI/VEH-Editor.html
@@ -18,7 +18,7 @@ Manual</span></a><span style="color: rgb(0, 0, 0); font-family: 'Times New Roman
 <div style="text-align: left; font-family: Verdana;">
 <h2>Vehicle Editor</h2>
 </div>
-<img src="pics/VEH-Editor.PNG" style="width: 588px; height: 644px;" alt="eng" usemap="#linkmap"><br>
+<img src="pics/VEH-Editor.PNG" style="width: 589px; height: 644px;" alt="eng" usemap="#linkmap"><br>
 <span style="font-family: Verdana;"><br>
 <br>
 </span>
@@ -239,7 +239,7 @@ for .vcdv/.vcdb files</span><br>
 <div style="margin-left: 80px;">Using the VECTO File
 Browser<br>
 </div>
-<br>
+<br><div style="margin-left: 40px;"><img style="width: 22px; height: 22px;" alt="" src="../pics/misc/OpenFile.PNG"> <span style="font-weight: bold;">Open file</span> with GRAPHi or an user-defined tool (see <a href="settings.html#opencmd">File Open Command)</a>.<br></div><br>
 <a name="retard"></a><span style="font-weight: bold;">Retarder</span><br>
 <div style="margin-left: 40px;">If available a <span style="font-weight: bold;">Retarder Torque Loss Map</span> can be defined here. Three options are available:<br>
 <ul>
