--- a/User Manual/GUI/mainform.html
+++ b/User Manual/GUI/mainform.html
@@ -63,7 +63,7 @@ editor</li>
 <li>Change the current Working Directory&nbsp;(using the
 VECTO File
 Browser)</li>
-</ul>
+</ul><li style="font-weight: bold;">Settings</li><ul><li>Opens the <a href="settings.html">Settings</a> dialog.</li></ul>
 </ul>
 </div>
 <div style="margin-left: 40px;"><br>
