--- a/User Manual/fileformat/VMOD.html
+++ b/User Manual/fileformat/VMOD.html
@@ -98,7 +98,7 @@ Eng</span>).</td>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt; width: 95px;" height="20">Gear</td>
 <td style="width: 66px;">[-]</td>
-<td style="width: 757px;">Gear. Zero = clutch opened / neutral.</td>
+<td style="width: 757px;">Gear. "0" = clutch opened / neutral. "0.5" =&nbsp;lock-up clutch is open (AT with torque converter only, see <a href="../GUI/GBX-Editor.html">Gearbox</a>)</td>
 </tr>
 <tr style="height: 15pt;" height="20">
 <td style="height: 15pt; width: 95px;" height="20">Ploss
@@ -176,10 +176,10 @@ Veh</td>
 <td style="height: 15pt; width: 95px;" height="20">FC</td>
 <td style="width: 66px;">[g/h]</td>
 <td style="width: 757px;">Fuel consumption.</td>
-</tr>
+</tr><tr><td>TC&#957;</td><td>[-]</td><td>Torque converter speed ratio*</td></tr><tr><td>TC&#956;</td><td>[-]</td><td>Torque converter torque ratio*</td></tr><tr><td>TC_M_Out</td><td>[Nm]</td><td>Torque converter output torque*</td></tr><tr><td>TC_n_Out</td><td>[1/min]</td><td>Torque converter output speed*</td></tr>
 </tbody>
 </table>
-<br>
+<span style="font-style: italic;">*only if the Torque Converter is defined in the <a href="../GUI/GBX-Editor.html">Gearbox</a> settings.</span><br>
 <span style="font-family: Verdana;"></span><br>
 <span style="font-family: Verdana;"></span></div>
 <span style="font-family: Verdana;"></span><br>
