--- a/User Manual/usermanual.html
+++ b/User Manual/usermanual.html
@@ -22,8 +22,8 @@ VECTO 1.1<br><br style="font-family: Verdana;"></span>
 <li style="font-family: Calibri;"><big><a href="quickstart.html">Quick Start Guide</a></big></li><li style="font-family: Calibri;"><big>User
 Interface</big></li>
 <ul>
-<li style="font-family: Calibri;"><big><a href="GUI/mainform.html">Main Form</a></big></li>
-<li style="font-family: Calibri;"><big><a href="GUI/VECTO-Editor.html">VECTO Editor</a></big></li>
+<li style="font-family: Calibri;"><big><a href="GUI/mainform.html">Main Form</a></big></li><ul><li style="font-family: Calibri;"><big><a href="GUI/settings.html">Settings</a><br></big></li></ul>
+<li style="font-family: Calibri;"><big><a href="GUI/VECTO-Editor.html">VECTO Editor</a></big></li><ul><li style="font-family: Calibri;"><big><a href="GUI/VECTO-Editor_Aux.html">Aux Dialog</a><br></big></li></ul>
 <li style="font-family: Calibri;"><big><a href="GUI/VEH-Editor.html">Vehicle Editor</a></big></li>
 <li style="font-family: Calibri;"><big><a href="GUI/ENG-Editor.html">Engine Editor</a></big></li>
 <li style="font-family: Calibri;"><big><a href="GUI/GBX-Editor.html">Gearbox Editor</a></big></li>
