--- a/User Manual/GUI/GBX-Editor.html
+++ b/User Manual/GUI/GBX-Editor.html
@@ -2,7 +2,7 @@
 <html><head>
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Gearbox Editor - VECTO User Manual</title></head>
 <body>
-<map name="linkmap"><area shape="rect" coords="11,34,30,52&quot;" href="#new"><area shape="rect" coords="33,33,51,53&quot;" href="#open"><area shape="rect" coords="59,34,76,53&quot;" href="#save"><area shape="rect" coords="85,33,102,52&quot;" href="#saveas"><area shape="rect" coords="112,32,131,54&quot;" href="#sendto"><area shape="rect" coords="36,117,401,134&quot;" href="#make"><area shape="rect" coords="34,149,176,170&quot;" href="#inertia"><area shape="rect" coords="218,148,401,172&quot;" href="#trint"><area shape="rect" coords="21,179,400,379&quot;" href="#gears"><area shape="rect" coords="22,383,52,408&quot;" href="#remgear"><area shape="rect" coords="239,403,319,424&quot;" href="#ok"><area shape="rect" coords="324,404,398,425&quot;" href="#cancel"></map>
+<map name="linkmap"><area shape="rect" coords="11,34,30,52&quot;" href="#new"><area shape="rect" coords="33,33,51,53&quot;" href="#open"><area shape="rect" coords="59,34,76,53&quot;" href="#save"><area shape="rect" coords="85,33,102,52&quot;" href="#saveas"><area shape="rect" coords="112,32,131,54&quot;" href="#sendto"><area shape="rect" coords="36,117,401,134&quot;" href="#make"><area shape="rect" coords="129,140,357,161&quot;" href="#type"><area shape="rect" coords="20,174,465,325&quot;" href="#gears"><area shape="rect" coords="20,329,50,353&quot;" href="#remgear"><area shape="rect" coords="149,330,209,353&quot;" href="#inertia"><area shape="rect" coords="399,331,445,353&quot;" href="#trint"><area shape="rect" coords="25,400,460,422&quot;" href="#polyfile"><area shape="rect" coords="25,430,225,451&quot;" href="#shiftinside"><area shape="rect" coords="25,457,161,479&quot;" href="#skipgear"><area shape="rect" coords="365,432,422,456&quot;" href="#torqres"><area shape="rect" coords="365,458,423,481&quot;" href="#mintime"><area shape="rect" coords="24,486,457,582&quot;" href="#startgear"><area shape="rect" coords="26,615,115,638&quot;" href="#tcon"><area shape="rect" coords="26,656,458,679&quot;" href="#tcfile"><area shape="rect" coords="323,684,393,707&quot;" href="#tcrefspeed"><area shape="rect" coords="308,723,382,746&quot;" href="#ok"><area shape="rect" coords="391,723,466,748&quot;" href="#cancel"></map>
 <table style="width: 100%; height: 54px; text-align: left; margin-left: auto; margin-right: auto;" border="0" cellpadding="2" cellspacing="2">
 <tbody>
 <tr>
@@ -16,13 +16,15 @@ Manual</span></a><span style="color: rgb(0, 0, 0); font-family: 'Times New Roman
 <hr style="width: 100%; height: 2px;"><a href="usermanual.html"><span style="font-family: Verdana;"></span></a><span style="font-family: Verdana;"></span>
 <div style="text-align: center;">
 <div style="text-align: left; font-family: Verdana;">
-<h2>Gearbox Editor</h2><big><big><big><span style="font-weight: bold; color: red;">!! This page is not up-to-date with the current Beta release !!<br><br></span></big></big></big>
-</div>
-<img style="width: 422px; height: 462px;" alt="gbx" usemap="#linkmap" src="pics/GBX-Editor.PNG"><br>
+<h2>Gearbox Editor</h2>
+<big><big><big><span style="font-weight: bold; color: red;">
+</span></big></big></big></div>
+<img style="width: 486px; height: 781px;" alt="gbx" usemap="#linkmap" src="pics/GBX-Editor.PNG"><br>
 <span style="font-family: Verdana;"><br>
 </span>
 <div style="text-align: left;">
-<div style="margin-left: 40px;"><img src="../pics/icons/blue-document-icon.png" style="width: 16px; height: 16px;" alt="new"><span style="font-weight: bold;"><a name="new"></a> New
+<div style="margin-left: 40px;"><img src="../pics/icons/blue-document-icon.png" style="width: 16px; height: 16px;" alt="new"><span style="font-weight: bold;"><a name="new"></a>
+New
 file</span><br>
 </div>
 <div style="margin-left: 80px;">Create a new empty .vgbx
@@ -59,12 +61,11 @@ Editor</a> the file will be sent automatically when saved.<br>
 </div>
 </div>
 <div style="margin-left: 40px;"><br>
-<span style="font-weight: bold;"><a name="make"></a>
-Make and Model</span><br>
+<span style="font-weight: bold;"><a name="make"></a> Make and Model</span><br>
 <div style="margin-left: 40px;">Free text defining the
 gearbox model, type, etc.<br>
 </div>
-<br>
+<br><a name="type"></a><span style="font-weight: bold;"> Transmission Type</span><br><div style="margin-left: 40px;">Depending on the transmission type some options below are not available. The following types are available:<ul><li><span style="font-weight: bold;">Manual Transmission</span> (MT)</li><ul><li>Activates the "<span style="font-weight: bold;">Skip Gears</span>" option. No torque converter.</li></ul><li><span style="font-weight: bold;">Automated Manual Transmission</span> (AMT)</li><ul><li>Activates&nbsp;the <span style="font-weight: bold;">"Allow shift-up inside polygons"</span> and "<span style="font-weight: bold;">Skip Gears</span>" option. No torque converter.</li></ul><li><span style="font-weight: bold;">Automatic Transmission</span> (AT)</li><ul><li>Torque converter ist set and must be parameterized.<span style="font-weight: bold;"></span></li></ul><li style="font-weight: bold;">Custom</li><ul><li style="font-weight: bold;"><span style="font-weight: normal;">Enables all options for user-defined settings.</span></li></ul></ul></div>
 <a name="inertia"></a> <span style="font-weight: bold;">Inertia</span> [kgm<sup>2</sup>]
 <div style="margin-left: 40px;">Rotational inertia of the
 gearbox (constant for all gears).<br>
@@ -77,9 +78,15 @@ gear shift event.<br>
 <br>
 </div>
 <a name="gears"></a> <span style="font-weight: bold;">Gears</span><br>
-<div style="margin-left: 40px;">Doubleclick items to edit
-ratio and efficiency of the selected gear. <br>Gear "A" defines the ratio of the axle transmission / differential.<br>Set ratio=0 for unused gears.<br>
-Alternatively to setting a constant efficiency value it is possible to
+<div style="margin-left: 40px;"><ul><li>Doubleclick items to edit
+ratio and efficiency of the selected gear. </li><li>
+Gear "A" defines the ratio of the axle transmission / differential.</li><li>Gear
+"TC" (AT only): For AT gearboxes with torque converter a seperate (fictional) gear
+is defined for cases where the lock-up clutch is open. This&nbsp;gear
+is used at vehicle start; when the up-shift rpm is reached VECTO
+will shift to the next gear (Gear 1) which means the lock-up clutch is
+closed. In the <a href="../fileformat/VMOD.html">modal result files (.vmod)</a> the "TC" gear will be output as&nbsp;"0.5" (to avoid non-numeric characters).  </li><li>
+Set ratio=0 for unused gears.</li></ul>Alternatively to setting a constant efficiency value it is possible to
 define a Torque Loss Map in the following format:<br>
 <br>
 <span style="font-weight: bold;">Torque Loss
@@ -117,7 +124,79 @@ with "<span style="font-weight: bold;">c</span> "</span><br>
 <br>
 <img style="width: 16px; height: 16px;" alt="rem" src="../pics/icons/minus-circle-icon.png"><a name="remgear"></a> Remove Gear (i.e. Ratio=0)<br>
 </div>
-<br>
+<br><br><big><big><span style="font-weight: bold;">Gear shift parameters</span></big></big><br><div style="margin-left: 40px;"><span style="font-weight: bold;"><br><a name="polyfile"></a>Shift polygons file</span> (.vgbs)<br><div style="margin-left: 40px;">This
+file contains the up- and down- shift curves that control the gear
+shift behaviour. Whenever the actual engine speed crosses the up- or
+down-shift line a gear-shift is initiated.<br><img style="width: 485px; height: 341px;" alt="" src="pics/GBX-Editor-shift1.PNG"><br><br><br><span style="font-weight: bold;">Shift Polygons File Format</span> (comma-separated, dot = decimal-mark):
+<table style="background-color: white; text-align: left; height: 115px; margin-left: 0px; width: 541px;" border="1" cellpadding="2" cellspacing="1">
+<tbody>
+<tr>
+<th style="text-align: center; width: 163px;"><span style="color: rgb(51, 102, 255);">c&nbsp;</span>Engine Torque</th>
+<th style="text-align: center; width: 180px;">Downshift rpm</th>
+<th style="text-align: center; width: 176px;">Upshift rpm</th>
+</tr>
+<tr>
+<td style="text-align: center; width: 163px;"><span style="color: rgb(51, 102, 255);"><span style="font-weight: bold;">c</span> </span>[Nm]</td>
+<td style="text-align: center; width: 180px;">[1/min]</td>
+<td style="text-align: center; width: 176px;">[1/min]</td>
+</tr>
+<tr>
+<td style="width: 163px;">...</td>
+<td style="width: 180px;">...</td>
+<td style="width: 176px;">...</td>
+</tr>
+<tr>
+<td style="width: 163px;">...</td>
+<td style="width: 180px;">...</td>
+<td style="width: 176px;">...</td>
+</tr>
+</tbody>
+</table>
+<span style="font-weight: bold; font-style: italic; color: rgb(51, 102, 255);">Note:</span><span style="font-style: italic; color: rgb(51, 102, 255);"> text
+lines (header, comments,
+etc.) </span><span style="text-decoration: underline; font-style: italic; color: rgb(51, 102, 255);">must</span><span style="font-style: italic; color: rgb(51, 102, 255);"> start
+with "<span style="font-weight: bold;">c</span> "</span><br>
+<br></div></div><div style="margin-left: 40px;"><a name="shiftinside"></a><span style="font-weight: bold;">Allow shift-up inside polygons</span><br><div style="margin-left: 40px;">If the next higher gear provides the required <a href="#torqres">torque reserve</a> and it's rpm is still above down-shift-rpm VECTO will shift up.<br><img style="width: 567px; height: 341px;" alt="" src="pics/GBX-Editor-shift2.PNG"></div><br><a name="skipgear"></a><span style="font-weight: bold;">Skip Gears</span><br><div style="margin-left: 40px;">Whenever
+a gear change is initiated (by crossing the up- or down-shift line)
+VECTO may skip one or several gears as long as the required <a href="#torqres">torque reserve</a> is provided.<br><img style="width: 568px; height: 341px;" alt="" src="pics/GBX-Editor-shift3.PNG"></div><br><a name="torqres"></a><span style="font-weight: bold;">Torque Reserve</span><br><div style="margin-left: 40px;">This parameter is required for the "<span style="font-weight: bold;">Allow shift-up inside polygons</span>" and "<span style="font-weight: bold;">Skip Gears</span>" options.</div><br><a style="font-weight: bold;" name="mintime"></a><span style="font-weight: bold;">Minimum time between two gear shifts</span><br><div style="margin-left: 40px;">Limits
+the time between two gear shifts in whole seconds. This rule will be
+ignored if rpms are too high or too low. Note that high values may
+cause high rpms during acceleration.<br></div><br><a name="startgear"></a><span style="font-weight: bold;">Start Gear</span><br><div style="margin-left: 40px;">In order to calculate an appropriate
+gear for vehicle start (first gear after vehicle standstill) a
+fictional load case is calculated using a specified&nbsp;<span style="font-weight: bold;">reference vehicle speed</span> and <span style="font-weight: bold;">reference acceleration</span>
+together with the actual road gradient, transmission losses and
+auxiliary power demand. This way the start gear is independent from the
+target speed. VECTO uses the highest possible gear which provides the
+defined <span style="font-weight: bold;">torque reserve</span>.</div><br></div><br><big><big><span style="font-weight: bold;">Torque Converter</span></big></big><br><br><div style="margin-left: 40px;"><a name="tcon"></a><span style="font-weight: bold;">Torque Converter installed</span><br><div style="margin-left: 40px;">This option is only available if <a href="#type">transmission type</a> is set to <span style="font-weight: bold;">Custom</span>. For AT this option is always On, for MT and AMT always Off.</div></div><br><div style="margin-left: 40px;"><a name="tcfile"></a><span style="font-weight: bold;">Torque converter characteristics file</span> (.vtcc)<br><div style="margin-left: 40px;">This file defines the torque converter characteristics as described in VDI 2153:<br><span style="font-weight: bold;">Speed Ratio (</span>&#957;) = Output Speed / Input Speed<br><span style="font-weight: bold;">Torque Ratio</span> (&#956;) = Output Torque / Input&nbsp;Torque<br><span style="font-weight: bold;">Input Torque</span> is the input torque (over &#957;) for a specific reference engine speed (see below).<br><br>The torque converter characteristics must also be defined for speed ratios of more than one (<span style="font-weight: bold;"></span>&#957;&gt;1) in order to calculate overrun conditions (torque&lt;0).<br><br><span style="font-weight: bold;">Torque Loss
+Map&nbsp;Format</span> (comma-separated, dot = decimal-mark):
+<table style="background-color: white; text-align: left; height: 115px; width: 560px; margin-left: 0px;" border="1" cellpadding="2" cellspacing="1">
+<tbody>
+<tr>
+<th style="text-align: center; width: 179px;"><span style="color: rgb(51, 102, 255);">c&nbsp;</span>Speed Ratio &#957;</th>
+<th style="text-align: center; width: 187px;">Torque Ratio &#956;</th>
+<th style="text-align: center; width: 170px;">Input Torque at reference rpm</th>
+</tr>
+<tr>
+<td style="text-align: center; width: 179px;"><span style="color: rgb(51, 102, 255);"><span style="font-weight: bold;">c</span> </span>[-]</td>
+<td style="text-align: center; width: 187px;">[-]</td>
+<td style="text-align: center; width: 170px;">[Nm]</td>
+</tr>
+<tr>
+<td style="width: 179px;">...</td>
+<td style="width: 187px;">...</td>
+<td style="width: 170px;">...</td>
+</tr>
+<tr>
+<td style="width: 179px;">...</td>
+<td style="width: 187px;">...</td>
+<td style="width: 170px;">...</td>
+</tr>
+</tbody>
+</table>
+<span style="font-weight: bold; font-style: italic; color: rgb(51, 102, 255);">Note:</span><span style="font-style: italic; color: rgb(51, 102, 255);"> text
+lines (header, comments,
+etc.) </span><span style="text-decoration: underline; font-style: italic; color: rgb(51, 102, 255);">must</span><span style="font-style: italic; color: rgb(51, 102, 255);"> start
+with "<span style="font-weight: bold;">c</span> "</span><br></div><br><a name="tcrefspeed"></a><span style="font-weight: bold;">Reference rpm for torque characteristic</span><br><div style="margin-left: 40px;">Reference engine speed associated with the&nbsp;<span style="font-weight: bold;">Input Torque</span> curve in the .vtcc file.</div></div><br><img style="width: 28px; height: 21px;" alt="" src="../pics/misc/browse.png"> <span style="font-weight: bold;">Open file browser</span>.<br><br><img style="width: 22px; height: 22px;" alt="" src="../pics/misc/OpenFile.PNG"> <span style="font-weight: bold;">Open file</span> with GRAPHi or an user-defined tool (see <a href="settings.html#opencmd">File Open Command)</a>.<br><br>
 </div>
 <div style="margin-left: 40px;"><img style="width: 75px; height: 23px;" alt="OK" src="../pics/misc/OK.png"><a name="ok"></a><span style="font-weight: bold;">Save and close file</span><br>
 <div style="margin-left: 40px;">If necessary the file path
@@ -127,7 +206,13 @@ will be updated.<br>
 </div>
 </div>
 <div style="margin-left: 40px;"><img style="width: 75px; height: 23px;" alt="Cancel" src="../pics/misc/Cancel.png"><a name="cancel"></a><span style="font-weight: bold;"> Cancel without saving</span></div>
-<table style="text-align: left; width: 100%; height: 1200px;" border="0" cellpadding="2" cellspacing="2"><tbody><tr><td></td></tr></tbody></table>
+<table style="text-align: left; width: 100%; height: 1200px;" border="0" cellpadding="2" cellspacing="2">
+<tbody>
+<tr>
+<td></td>
+</tr>
+</tbody>
+</table>
 <div style="text-align: left;">
 <hr style="width: 100%; height: 2px;"><a href="../contact.html">Contact</a>
 </div>
