--- a/User Manual/GUI/VECTO-Editor_Driver.html
+++ b/User Manual/GUI/VECTO-Editor_Driver.html
@@ -2,7 +2,7 @@
 <html><head>
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>VECTO Editor Driver Tab - VECTO User Manual</title></head>
 <body>
-<map name="linkmap"><area shape="rect" coords="16,108,114,130&quot;" href="VECTO-Editor.html"><area shape="rect" coords="20,160,683,187&quot;" href="#vacc"><area shape="rect" coords="23,201,218,338&quot;" href="#gear"></map>
+<map name="linkmap"><area shape="rect" coords="11,142,110,164&quot;" href="VECTO-Editor.html"><area shape="rect" coords="20,196,680,218&quot;" href="#vacc"></map>
 <table style="width: 100%; height: 54px; text-align: left; margin-left: auto; margin-right: auto;" border="0" cellpadding="2" cellspacing="2">
 <tbody>
 <tr>
@@ -19,21 +19,26 @@ Manual</span></a><span style="color: rgb(0, 0, 0); font-family: 'Times New Roman
 <h2><a href="VECTO-Editor.html">VECTO Editor</a>
 / Driver Tab</h2>
 </div>
-<img src="pics/VECTO-Editor_Driver.PNG" usemap="#linkmap" style="width: 712px; height: 652px;" alt="Driver"><br>
+<img src="pics/VECTO-Editor_Driver.PNG" usemap="#linkmap" style="width: 712px; height: 700px;" alt="Driver"><br>
 <span style="font-family: Verdana;"><br>
 </span>
 <div style="text-align: left;"><span style="font-family: Verdana;"></span><span style="font-weight: bold;"><a name="vacc"></a>Max.
 acceleration and brake curves&nbsp;</span>(.vacc Input File)<br>
 <div style="margin-left: 40px;">Limits vehicle
 acceleration and deceleration depending on vehicle speed.<br>
-<span style="font-weight: bold;"><br>Input File Format</span>
-(comma-separated, dot = decimal-mark):<br><br></div>
+<span style="font-weight: bold;"><br>
+Input File Format</span>
+(comma-separated, dot = decimal-mark):<br>
+</div>
 <table style="background-color: white; margin-left: 40px; text-align: left; height: 115px; width: 534px;" border="1" cellpadding="2" cellspacing="1">
 <tbody>
 <tr>
-<th style="text-align: center; width: 150px;"><span style="color: rgb(51, 102, 255);">c </span>vehicle speed</th>
-<th style="text-align: center; width: 159px;">Max. acceleration</th>
-<th style="text-align: center; width: 161px;">Max. deceleration</th>
+<th style="text-align: center; width: 150px;"><span style="color: rgb(51, 102, 255);">c </span>vehicle
+speed</th>
+<th style="text-align: center; width: 159px;">Max.
+acceleration</th>
+<th style="text-align: center; width: 161px;">Max.
+deceleration</th>
 </tr>
 <tr>
 <td style="text-align: center; width: 150px;"><span style="color: rgb(51, 102, 255);"><span style="font-weight: bold;">c</span> </span>[km/h]</td>
@@ -44,15 +49,32 @@ acceleration and deceleration depending on vehicle speed.<br>
 <td style="width: 150px;">...</td>
 <td style="width: 159px;">...</td>
 <td style="width: 161px;">...</td>
-</tr><tr><td style="width: 150px;">...</td><td style="width: 159px;">...</td><td style="width: 161px;">...</td></tr>
+</tr>
+<tr>
+<td style="width: 150px;">...</td>
+<td style="width: 159px;">...</td>
+<td style="width: 161px;">...</td>
+</tr>
 </tbody>
 </table>
-<div style="margin-left: 40px;"><span style="font-weight: bold; font-style: italic; color: rgb(51, 102, 255);">Note:</span><span style="font-style: italic; color: rgb(51, 102, 255);"> text lines (header, comments,
-etc.) </span><span style="text-decoration: underline; font-style: italic; color: rgb(51, 102, 255);">must</span><span style="font-style: italic; color: rgb(51, 102, 255);"> start with "<span style="font-weight: bold;">c</span> "</span><br></div>
+<div style="margin-left: 40px;"><span style="font-weight: bold; font-style: italic; color: rgb(51, 102, 255);">Note:</span><span style="font-style: italic; color: rgb(51, 102, 255);"> text
+lines (header, comments,
+etc.) </span><span style="text-decoration: underline; font-style: italic; color: rgb(51, 102, 255);">must</span><span style="font-style: italic; color: rgb(51, 102, 255);"> start
+with "<span style="font-weight: bold;">c</span> "</span><br><br><img style="width: 28px; height: 21px;" alt="" src="../pics/misc/browse.png"> <span style="font-weight: bold;">Open file browser</span>.<br><br><img style="width: 22px; height: 22px;" alt="" src="../pics/misc/OpenFile.PNG"> <span style="font-weight: bold;">Open file</span> with GRAPHi or an user-defined tool (see <a href="settings.html#opencmd">File Open Command)</a>.<br>
+</div>
 <br>
-<span style="font-weight: bold;"><a name="gear"></a>Gear
-Shift Parameters</span><br>
-<div style="margin-left: 40px;">[No description yet]<br><br><br><table style="text-align: left; width: 100%; height: 1200px;" border="0" cellpadding="2" cellspacing="2"><tbody><tr><td></td></tr></tbody></table><br></div>
+<span style="font-weight: bold;"><br></span><div style="margin-left: 40px;"><br>
+<br>
+<br>
+<table style="text-align: left; width: 100%; height: 1200px;" border="0" cellpadding="2" cellspacing="2">
+<tbody>
+<tr>
+<td></td>
+</tr>
+</tbody>
+</table>
+<br>
+</div>
 <span style="font-family: Verdana;"></span></div>
 <span style="font-family: Verdana;"></span>
 <div style="text-align: left;">
@@ -61,7 +83,6 @@ Shift Parameters</span><br>
 <hr style="width: 100%; height: 2px;"><a href="../contact.html">Contact</a>
 </div>
 </div>
-
 </div>
 <ul style="text-align: left; font-family: Tahoma;">
 </ul>
