- Implemented Eco-Roll, Overspeed, Look Ahead Coasting - New parameters in .vecto file (F_GEN, cGEN Update) - Minor updates in .gbx editor - Some file-specific error messages link to files - More exact Distance Correction

--- a/User Manual/GUI/GBX-Editor.html
+++ b/User Manual/GUI/GBX-Editor.html
@@ -122,7 +122,7 @@ lines (header, comments,
 etc.) </span><span style="text-decoration: underline; font-style: italic; color: rgb(51, 102, 255);">must</span><span style="font-style: italic; color: rgb(51, 102, 255);"> start
 with "<span style="font-weight: bold;">c</span> "</span><br>
 <br>
-<img style="width: 16px; height: 16px;" alt="rem" src="../pics/icons/minus-circle-icon.png"><a name="remgear"></a> Remove Gear (i.e. Ratio=0)<br>
+<img style="width: 16px; height: 16px;" alt="rem" src="../pics/icons/minus-circle-icon.png"><a name="remgear"></a> Remove Gear<br>
 </div>
 <br><br><big><big><span style="font-weight: bold;">Gear shift parameters</span></big></big><br><div style="margin-left: 40px;"><span style="font-weight: bold;"><br><a name="polyfile"></a>Shift polygons file</span> (.vgbs)<br><div style="margin-left: 40px;">This
 file contains the up- and down- shift curves that control the gear
